--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
